PessoaRepositotyTest and PessoaController

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,9 @@
 # @JotaIT Services
 # By default, when a connection to the database is closed, the database is closed as well.
 # If we want the database to last for as long as the JVM is running, we can specify the property DB_CLOSE_DELAY=-1
-# http://www.baeldung.com/java-in-memory-databases
+# http://www.baeldung.com/spring-testing-separate-data-source
 
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-hibernate.dialect=org.hibernate.dialect.H2Dialect
-driverClassName=org.h2.Driver
-url=jdbc:h2:mem:bank;DB_CLOSE_DELAY=-1
-username=root
-password=root
-
-debug=true
-server.port=8090
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:db;DB_CLOSE_DELAY=-1
+spring.datasource.username=sa
+spring.datasource.password=sa
