--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,14 @@
 # http://www.baeldung.com/spring-testing-separate-data-source
 
 spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:db;DB_CLOSE_DELAY=-1
-spring.datasource.username=sa
-spring.datasource.password=sa
+spring.datasource.url=jdbc:h2:mem:bank;DB_CLOSE_DELAY=-1
+spring.datasource.username=root
+spring.datasource.password=root
+
+# https://github.com/altfatterz/spring-boot-flyway/blob/master/src/test/resources/application.properties
+# create and then destroy the session at the end of the session
+spring.jpa.hibernate.ddl-auto=create-drop
+# it is set true by default
+flyway.enabled=true
+# it is set true by default
+spring.datasource.initialize=true
