Add Pf and Pj classes Update sql schema

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
-# @JotaIT Services
+#
+# @Copyright JotaIT Services
+#
 # By default, when a connection to the database is closed, the database is closed as well.
 # If we want the database to last for as long as the JVM is running, we can specify the property DB_CLOSE_DELAY=-1
 # http://www.baeldung.com/spring-testing-separate-data-source
