--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,4 +1,6 @@
-# @JotaIT Services
+#
+# @Copyright JotaIT Services
+#
 # LOG4J IN CONSOLE
 # https://www.mkyong.com/logging/log4j-log4j-properties-examples/
 
