--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,12 @@
 #
 # @Copyright JotaIT Services
 #
-# By default, when a connection to the database is closed, the database is closed as well.
-# If we want the database to last for as long as the JVM is running, we can specify the property DB_CLOSE_DELAY=-1
-# http://www.baeldung.com/spring-testing-separate-data-source
+# H2
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
 
+# Datasource
+spring.datasource.url=jdbc:h2:file:/home/jean/hubfintech/bank
+spring.datasource.username=sa
+spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:bank;DB_CLOSE_DELAY=-1
-spring.datasource.username=root
-spring.datasource.password=root
-
-# https://github.com/altfatterz/spring-boot-flyway/blob/master/src/test/resources/application.properties
-# create and then destroy the session at the end of the session
-spring.jpa.hibernate.ddl-auto=create-drop
-# it is set true by default
-flyway.enabled=true
-# it is set true by default
-spring.datasource.initialize=true
